--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home">Home</a></li>
-                    <li class="nav__item"><a href="#">Education</a></li>
-                    <li class="nav__item"><a href="#">About me</a></li>
-                    <li class="nav__item"><a href="#">My Work</a></li>
+                    <li class="nav__item"><a href="#education">Education</a></li>
+                    <li class="nav__item"><a href="#about">About me</a></li>
+                    <li class="nav__item"><a href="#work">My Work</a></li>
                 </ul>
             </nav>
         </header>
@@ -43,21 +43,77 @@
             <h2 class="section__title section__title--education">Where I have studied</h2>
             <div class="schooling">
                 <div class="education">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Ontario Tech University</h3>
+                    <p>I am a 3rd year Undergraduate student at Ontario Tech University
+                        Bachelor of Engineering(Software Engineer)
+                    </p>
                 </div> <!--Education-->
 
                 <div class="education">
-                    <h3></h3>
-                    <p></p>
+                    <h3>R.H. KING ACADEMY</h3>
+                    <p>I Finished High School</p>
                 </div> <!--Education-->
 
-                <div class="education">
-                    <h3></h3>
-                    <p></p>
-                </div> <!--Education-->
             </div>
             <a href="#work" class="btn">My Work</a>
+        </section>
+        <!--About me-->
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__substitle--about"></p>
+
+            <div class="about-me__body">
+                <p></p>
+                <p></p>
+            </div>
+            <img src="img/group.jpg" alt="group photo">
+        </section>
+        <!--My work-->
+        <section class="my-work" id="work">
+            <h2 class="section__title">My work</h2>
+            <p class="section__subtitle"></p>
+
+            <div class="portfolio">
+                <!--portfolio item 01-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
+
+            <div class="portfolio">
+                <!--portfolio item 02-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
+
+            <div class="portfolio">
+                <!--portfolio item 03-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
+
+            <div class="portfolio">
+                <!--portfolio item 03-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
+
+            <div class="portfolio">
+                <!--portfolio item 04-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
+
+            <div class="portfolio">
+                <!--portfolio item 05-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                </a>
+            </div>
         </section>
     </body>
 </html>
