--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
         <!-- Introduction -->
-        <section class="introduction" id="home">
+        <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Fardin Rahman</strong>
             </h1>
@@ -64,7 +64,9 @@
         <!--About me-->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__substitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">
+                An Undergraduate Software Engineer
+            </p>
 
             <div class="about-me__body">
                 <p></p>
