--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="img/fardinrahman.jpg" alt="">
+                <img src="img/logo.jpg" alt="">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -38,8 +38,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Fardin Rahman</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Software engineering Student</p>
-            <img src="img/portfolio.jpg" alt="a picture of Fardin Rahman 2">
+            <p class="section__subtitle section__subtitle--intro">Software engineer</p>
+            <img src="img/fardinrahman.jpg" alt="a picture of Fardin Rahman 2" class="intro__img">
         </section>
 
         <!-- Education -->
