--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Fardin Rahman</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Software engineer</p>
+            <p class="section__subtitle section__subtitle--intro">Software engineering student</p>
             <img src="img/fardinrahman.jpg" alt="a picture of Fardin Rahman 2" class="intro__img">
         </section>
 
         <!-- Education -->
-        <section class="my--education" id="schooling">
-            <h2 class="section__title section__title--education">Where I have studied</h2>
+        <section class="my-education" id="schooling">
+            <h2 class="section__title section__title--education">Education</h2>
             <div class="schooling">
                 <div class="education">
                     <h3>Ontario Tech University</h3>
@@ -69,10 +69,16 @@
             </p>
 
             <div class="about-me__body">
-                <p></p>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <img src="img/group.jpg" alt="group photo">
+            <img src="img/group.jpg" alt="group photo" class="about-me__img">
         </section>
         <!--My work-->
         <section class="my-work" id="work">
