--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home">Home</a></li>
-                    <li class="nav__item"><a href="#education">Education</a></li>
-                    <li class="nav__item"><a href="#about">About me</a></li>
-                    <li class="nav__item"><a href="#work">My Work</a></li>
+                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#education" class="nav__link">Education</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
                 </ul>
             </nav>
         </header>
@@ -82,7 +82,7 @@
         </section>
         <!--My work-->
         <section class="my-work" id="work">
-            <h2 class="section__title">My work</h2>
+            <h2 class="section__title section__title--work">My work</h2>
             <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
@@ -119,7 +119,7 @@
         </section>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer">
             <!-- replace with your own email address -->
             <a href="fardinrahman647@gmail.com" class="footer__link">fardinrahman647@gmail.com</a>
             <ul class="social-list">
@@ -145,5 +145,7 @@
                 </li>
             </ul>
         </footer>
+
+        <script src="js/index.js"></script>
     </body>
 </html>
