--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 </a>
             
                 <!-- portfolio item 03 -->
-                <!-- <a href="#" class="portfolio__item">
+                <a href="#" class="portfolio__item">
                     <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
-                </a> -->
+                </a>
             
                 <!--portfolio item 03-->
                 <!-- <a href="#" class="portfolio__item">
