--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 </a>
             
                 <!-- portfolio item 03 -->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-01.jpg" alt ="" class="portfolio__img">
+                <a href="https://github.com/Fardin-E/Markdown_blog_app" class="portfolio__item">
+                    <img src="img/markdown_blog.jpg" alt ="" class="portfolio__img">
                 </a>
             
                 <!--portfolio item 04-->
