--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
             </p>
 
             <div class="about-me__body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p> Fardin is a dedicated and motivated 4th-year student pursuing a degree in Software Engineering at Ontario Tech University. 
+                    With a passion for technology and a strong foundation in software development, Fardin is eager to showcase his skills and accomplishments.</p>
+                <p>Throughout my academic journey, I have gained valuable knowledge in various programming languages, including Java, Python, and C++.
+                    I have honed my skills in software development, data structures, algorithms, and problem-solving. 
+                    I has also developed a keen interest in web development, with proficiency in HTML, CSS, and JavaScript, along with popular frameworks such as React.</p>
+                <p>
+                    My portfolio showcases my notable projects and contributions. 
+                    From developing interactive web applications to implementing data management systems, each project demonstrates his attention to detail, creativity, and problem-solving skills.
+                    I take pride in his ability to analyze complex problems, break them down into manageable components, and deliver robust and efficient solutions.
+                </p>
             </div>
             <img src="img/group.jpg" alt="group photo" class="about-me__img">
         </section>
