--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </p>
 
             <div class="about-me__body">
-                <p> Fardin is a dedicated and motivated 4th-year student pursuing a degree in Software Engineering at Ontario Tech University. 
+                <p> I am a dedicated and motivated 4th-year student pursuing a degree in Software Engineering at Ontario Tech University. 
                     With a passion for technology and a strong foundation in software development, Fardin is eager to showcase his skills and accomplishments.</p>
                 <p>Throughout my academic journey, I have gained valuable knowledge in various programming languages, including Java, Python, and C++.
                     I have honed my skills in software development, data structures, algorithms, and problem-solving. 
