--- a/index.html
+++ b/index.html
@@ -48,14 +48,18 @@
             <div class="schooling">
                 <div class="education">
                     <h3>Ontario Tech University</h3>
-                    <p>I am a 3rd year Undergraduate student at Ontario Tech University
-                        Bachelor of Engineering(Software Engineer)
+                    <p>As an undergraduate 4th year student at Ontario Tech University, I have consistently excelled academically, achieving a remarkable score throughout my studies. 
+                        With a strong commitment to learning and a passion for my field of study, I have consistently demonstrated exceptional performance in my coursework and examinations. 
+                        My dedication to academic excellence is reflected in my outstanding score, which showcases my ability to grasp complex concepts and apply them effectively. Through my years at Ontario Tech University, I have developed a solid foundation of knowledge and skills that have prepared me for success in my future academic and professional endeavors. With a great score, I am confident in my abilities to make significant contributions in my chosen field.
                     </p>
                 </div> <!--Education-->
 
                 <div class="education">
                     <h3>R.H. KING ACADEMY</h3>
-                    <p>I Finished High School</p>
+                    <p>Graduating from R.H. King Academy with an exceptional academic record is a testament to my dedication and commitment to excellence. 
+                        Throughout my years at R.H. King Academy, I consistently achieved outstanding grades, demonstrating my strong work ethic and intellectual capabilities. 
+                        I actively engaged in a wide range of subjects, honing my critical thinking and problem-solving skills. My remarkable academic achievements reflect my passion for learning and my ability to thrive in a challenging and stimulating educational environment. 
+                        Graduating from R.H. King Academy with a great score has equipped me with a solid foundation for future academic and professional endeavors.</p>
                 </div> <!--Education-->
 
             </div>
